fix the each filering list height and enable scroll bar

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -46,7 +46,7 @@
                                      {% else %}
                                         class="panel-collapse collapse"
                                      {% endif %}>
-                                    <ul class="list-group">
+                                    <ul class="list-group" style="height: 200px; overflow-y: auto;">
                                     {% for item in values %}
                                         {% if item.1 > 0 %}
                                             <li class="list-group-item clearfix">
