Updating Removed bootstrap top container from base template

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-<div class="container-fluid" id="main">
+<div class="container" id="main">
     <div class="row">
         <div class="col-sm-12">
             <h2 class="page-title">My Resources</h2>
