--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -3,7 +3,7 @@
 {% block title %}Discovery{% endblock %}
 
 {% block main %}
-<div class="container-fluid" id="main">
+<div class="container" id="main">
     <div class="row">
         <div class="col-lg-3" id="folders">
             {% if query %}
