--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -1,6 +1,19 @@
 {% extends "pages/page.html" %}
 
 {% block main %}
+    <div class="gray-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div>
+                        This is a group preview
+                        This is a group preview
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
