--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -42,7 +42,12 @@
                                 <input class="row-selector" type="checkbox" id="{{ res.short_id }}">
                             </td>
                             <td>
-                                <strong><a href="{{ res.get_absolute_url }}" target="_blank">{{ res.metadata.title }}</a></strong></td>
+                                {% if res|user_permission:request.user.pk|lower == "none" %}
+                                    <strong>{{ res.metadata.title }}</strong>
+                                {% else %}
+                                    <strong><a href="{{ res.get_absolute_url }}" target="_blank">{{ res.metadata.title }}</a></strong>
+                                {% endif %}
+                            </td>
                             <td>
                                 {{ res.resource_type }}
                             </td>
@@ -156,15 +161,8 @@
                                 <tr id="{{ res.short_id }}">
                                     <td>
                                         {% with page.get_content_model as collection_obj %}
-                                            {# public res and discoverable res both have res.raccess.discoverable=true #}
-                                            {# if collection is pub or dis, and user is edit, so disable all private res in candidate table #}
-                                            {% if collection_obj.raccess.discoverable and is_edit_user and not res.raccess.discoverable%}
-                                                <input class="row-selector" type="checkbox" id="{{ res.short_id }}" disabled>
-                                            {% else %}
-                                                <input class="row-selector" type="checkbox" id="{{ res.short_id }}">
-                                            {% endif %}
+                                            <input class="row-selector" type="checkbox" id="{{ res.short_id }}">
                                         {% endwith %}
-
                                     </td>
                                     <td>
                                         <strong><a href="{{ res.get_absolute_url }}" target="_blank">{{ res.metadata.title }}</a></strong></td>
@@ -329,7 +327,7 @@
                     {
                         $('#save-collection-warning-body').text("");
                         var h_tag = $("<h5 />", {
-                                    text : "The target user has no permission to view the following member resource(s) in this collection: "
+                                    text : "The target user has no permission to view the following contained resource(s) in this collection: "
                                 });
                         $('#save-collection-warning-body').append(h_tag);
                         for (i=0; i<json_response.no_permission_list.length; i++)
@@ -380,20 +378,9 @@
                 $('#save-collection-warning-body').text(waning_message);
                 $('#save-collection-warning').modal('show');
             }
-            else if("{{ page.get_content_model.raccess.discoverable|lower }}"=="true" &&
-             "{{ is_edit_user|lower }}"=="true" && $('#collection-table').DataTable().rows().count()==1)
-            {
-                // edit user cannot remove the last one member res in a public or discoverable collection
-                $('#save-collection-warning-title').text("Warning");
-                $('#save-collection-btn-cancel').hide();
-                $('#save-collection-btn-ok').text("OK").off("click");
-                waning_message = "Removing the last one member resource will downgrade sharing status to Private, but you have no permission to change it.";
-                $('#save-collection-warning-body').text(waning_message);
-                $('#save-collection-warning').modal('show');
-            }
             else
             {
-                 // copy row data and add to collection-candidate table
+                // copy row data and add to collection-candidate table
                 $('#collection-table-candidate').DataTable().row.add(removed_row_from_colletion.data()).draw(false);
                 // remove row obj
                 removed_row_from_colletion.remove().draw(false);
@@ -415,154 +402,74 @@
         // revised metadata_update_ajax_submit
         function collection_update_ajax_submit_new(form_id)
         {
-                    $alert_success = '<div class="alert alert-success" id="success-alert"> \
-                        <button type="button" class="close" data-dismiss="alert">x</button> \
-                        <strong>Success! </strong> \
-                        Metadata updated.\
-                    </div>';
-                    $alert_error = '<div class="alert alert-danger" id="error-alert"> \
-                        <button type="button" class="close" data-dismiss="alert">x</button> \
-                        <strong>Error! </strong> \
-                        Metadata failed to update.\
-                    </div>';
-                    $form=$('#' + form_id);
-
-                    var resource_id_list = [];
-
-                    $('#collection-table').DataTable().rows().every(function()
-                    {resource_id_list.push(this.id);});
-                    $.ajax({
-                        type: "POST",
-                        url: $form.attr('action'),
-                        dataType: "json",
-                        data: {"resource_id_list": resource_id_list},
-                        success: function(result)
-                        {
-                            /* The div contains now the updated form */
-                            var json_response = result;
-                            if (json_response.status === 'success')
-                            {
-                                $(document).trigger("submit-success");
-                                if (json_response.user_permission.toLowerCase() == "own")
-                                {
-                                    // forced to change to a new sharing status
-                                    if (json_response.new_sharing_status)
-                                    {
-                                        if (json_response.new_sharing_status.toLowerCase() == "private"
-                                                && json_response.current_sharing_status.toLowerCase() != "private")
-                                        {
-                                            $("#btn-public").prop("disabled", true).removeClass("active");
-                                            $("#btn-discoverable").prop("disabled", true).removeClass("active");
-                                            $("#btn-private").prop("disabled", true).addClass("active");
-
-                                            customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> " +
-                                                    "Sharing status downgraded to private", 3000);
-                                        }
-                                    } //if (json_response.new_sharing_status)
-                                    else
-                                    {
-                                        if (json_response.metadata_status == "Sufficient to make public")
-                                        {
-                                            if(json_response.current_sharing_status.toLowerCase() == "private")
-                                            {
-                                                customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> sufficient to make public", 3000);
-                                                $("#btn-public").prop("disabled", false);
-                                                $("#btn-discoverable").prop("disabled", false);
-                                            }
-                                            else if (json_response.current_sharing_status.toLowerCase() == "discoverable")
-                                            {
-                                                // do nothing
-                                            }
-                                            else if (json_response.current_sharing_status.toLowerCase() == "public")
-                                            {
-                                                // do nothing
-                                            }
-                                        }
-                                        else // "Insufficient to make public"
-                                        {
-                                            $("#btn-public").prop("disabled", true);
-                                            $("#btn-discoverable").prop("disabled", true);
-                                            $("#btn-private").prop("disabled", false);
-                                        }
-                                    } // if (json_response.new_sharing_status)
-                                } // if (json_response.user_permission.toLowerCase() == "own")
-
-                                $('body > .container').append($alert_success);
-                                $('#error-alert').each(function(){
-                                    this.remove();
-                                });
-                                $(".alert-success").fadeTo(2000, 500).fadeOut(1000, function(){
-                                    $(document).trigger("submit-success");
-                                    $(".alert-success").alert('close');
-                                });
-                            } // if (json_response.status === 'success')
-                            else{
-                                $('body > .container').append($alert_error);
-                                $(".alert-danger").fadeTo(3000, 500).fadeOut(1000, function(){
-                                    $(document).trigger("submit-error");
-                                    $(".alert-danger").alert('close');
-                                });
-                            }
-                        },
-                        error: function(XMLHttpRequest, textStatus, errorThrown)
-                        {
-                            $('#' + form_id).before($alert_error);
-                            $(".alert-error").fadeTo(2000, 500).slideUp(1000, function(){
-                                $(".alert-error").alert('close');
-                            });
-                        }
-                    });
-                    //don't submit the form
-                    return false;
-                }
-
-        function save_btn_callback_new()
-        {
-            if ($('#btn-public').hasClass("active")||$('#btn-discoverable').hasClass("active"))
-            {
-                no_member_resource_warning_flag = false;
-                found_private_warning_flag = false;
-
-                if ($('#collection-table').DataTable().rows().count()==0)
+            $alert_success = '<div class="alert alert-success" id="success-alert"> \
+                <button type="button" class="close" data-dismiss="alert">x</button> \
+                <strong>Success! </strong> \
+                Metadata updated.\
+            </div>'
+            $alert_error = '<div class="alert alert-danger" id="error-alert"> \
+                <button type="button" class="close" data-dismiss="alert">x</button> \
+                <strong>Error! </strong> \
+                Metadata failed to update.\
+            </div>'
+            $form=$('#' + form_id);
+            var resource_id_list = [];
+            $('#collection-table').DataTable().rows().every(function()
+            {resource_id_list.push(this.id);});
+            $.ajax({
+                type: "POST",
+                url: $form.attr('action'),
+                dataType: "json",
+                data: {"resource_id_list": resource_id_list},
+                success: function(result)
                 {
-                    no_member_resource_warning_flag = true;
-                }
-                else
-                {
-                    $('#collection-table').DataTable().rows().every(function()
-                        {
-                            if(this.data()[4].toLowerCase().indexOf("private") >= 0)
-                            { found_private_warning_flag = true;}
-                        });
-                }
-
-                if (no_member_resource_warning_flag || found_private_warning_flag)
-                {
-                    $('#save-collection-warning-title').text("Downgrade to Private");
-                    $('#save-collection-btn-cancel').off("click");
-                    $('#save-collection-btn-ok').off("click").on( "click", save_collection_new);
-
-                    waning_message = "The collection has no member resource. Sharing status will downgrade to PRIVATE.";
-                    if (found_private_warning_flag)
+                    /* The div contains now the updated form */
+                    json_response = result;
+                    if (json_response.status === 'success')
                     {
-                        waning_message = "You are about to add private resources into this collection. Sharing status will downgrade to PRIVATE.";
+                        $(document).trigger("submit-success");
+                        $('#save-new').hide();
+                        if (json_response.hasOwnProperty('metadata_status')) {
+                            if (json_response.metadata_status !== $('#metadata-status').text()) {
+                                $('#metadata-status').text(json_response.metadata_status);
+                                if (json_response.metadata_status.toLowerCase().indexOf("insufficient") == -1) {
+                                    customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> sufficient to publish or make public", 3000);
+                                    $("#btn-public").prop("disabled", false);
+                                    $("#btn-discoverable").prop("disabled", false);
+                                }
+                            }
+                        }
+                        $('body > .container').append($alert_success);
+                        $('#error-alert').each(function(){
+                            this.remove();
+                        });
+                        $(".alert-success").fadeTo(2000, 500).fadeOut(1000, function(){
+                            $(document).trigger("submit-success");
+                            $(".alert-success").alert('close');
+                        });
                     }
-                    $('#save-collection-warning-body').text(waning_message);
-
-                    $('#save-collection-warning').modal('show');
-                }
-                else
+                    else{
+                        $('body > .container').append($alert_error);
+                        $(".alert-danger").fadeTo(3000, 500).fadeOut(1000, function(){
+                            $(document).trigger("submit-error");
+                            $(".alert-danger").alert('close');
+                        });
+                    }
+                },
+                error: function(XMLHttpRequest, textStatus, errorThrown)
                 {
-                    save_collection_new();
+                    $('#' + form_id).before($alert_error);
+                    $(".alert-error").fadeTo(2000, 500).slideUp(1000, function(){
+                        $(".alert-error").alert('close');
+                    });
                 }
-            } // if ($('#btn-public').hasClass("active")||$('#btn-discoverable').hasClass("active"))
-            else
-            {
-                save_collection_new();
-            } // if ($('#btn-public').hasClass("active")||$('#btn-discoverable').hasClass("active"))
+            });
+            //don't submit the form
+            return false;
         }
 
-        function save_collection_new ()
+
+        function save_btn_callback_new()
         {
             collection_update_ajax_submit_new('collector-new');
         }
