--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -210,12 +210,14 @@
                             {#  Resource specific metadata can't be edited for HIS Referenced Time Series #}
                             {% if cm|resource_type != "HIS Referenced Time Series" or not metadata_form %}
                                 {% if  cm|resource_type != "Generic" %}
-                                    <li class="col-xs-2 col-md-2">
-                                        <a href="#resourceSpecificTab" data-toggle="tab" title="Resource specific">
-                                            <span class="glyphicon glyphicon-folder-close"></span>
-                                            &nbspResource Specific
-                                        </a>
-                                    </li>
+                                    {% if  cm|resource_type|lower != "collection resource" %}
+                                        <li class="col-xs-2 col-md-2">
+                                            <a href="#resourceSpecificTab" data-toggle="tab" title="Resource specific">
+                                                <span class="glyphicon glyphicon-folder-close"></span>
+                                                &nbspResource Specific
+                                            </a>
+                                        </li>
+                                    {% endif %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -802,19 +804,21 @@
                             {#  Resource specific metadata can't be edited for HIS Referenced Time Series #}
                             {% if cm|resource_type != "HIS Referenced Time Series" or not metadata_form %}
                                 {% if  cm|resource_type != "Generic" %}
-                                    <div class="tab-pane" id="resourceSpecificTab">
-                                        {% if not metadata_form %}
+                                    {% if  cm|resource_type|lower != "collection resource" %}
+                                        <div class="tab-pane" id="resourceSpecificTab">
+                                            {% if not metadata_form %}
 
-                                            {% block extended_metadata %}
+                                                {% block extended_metadata %}
 
+                                                {% endblock %}
+
+                                            {% else %}
+                                                {% crispy metadata_form %}
+                                            {% endif %}
+                                            {% block extra_section %} {# add extra section for resource landing page #}
                                             {% endblock %}
-
-                                        {% else %}
-                                            {% crispy metadata_form %}
-                                        {% endif %}
-                                        {% block extra_section %} {# add extra section for resource landing page #}
-                                        {% endblock %}
-                                    </div>
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
